# calculate-deposit

./: .env.example  .gitignore  DockerFile  docker-compose.yml  pyproject.toml  ruff.toml  run_app.py  settings.py
alembic/: env.py
alembic/versions/: e8a0660684a6_initial_migration.py
src/api/: app.py  depends.py
src/api/middlewares/: exception.py  logging.py
src/api/routers/v1/: deposit.py
src/constants/: deposit.py
src/models/: core.py  deposits.py
src/schemas/: deposits.py  exceptions.py
src/services/: deposits.py
src/utils/: alembic.py  deposit.py
src/utils/logging/: config.py  logger.py
tests/: conftest.py
tests/functional/: test_api.py
tests/unit/api/: test_depends.py
tests/unit/models/: test_deposit_models.py
tests/unit/schemas/: test_deposits_schemas.py
tests/unit/services/: test_deposits_services.py
tests/unit/utils/: test_deposit_utils.py
