[tool.poetry]
name = "calculate-deposit"
version = "0.1.0"
description = ""
authors = ["akrasilov <alexandrkrasilov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.6"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.36"}
pytest = "^8.3.4"
pydantic-settings = "^2.7.0"
uvicorn = "^0.34.0"
python-json-logger = "^3.2.1"
asyncpg = "^0.30.0"
ruff = "^0.8.3"
alembic = "^1.14.0"
psycopg2-binary = "^2.9.10"
pytest-asyncio = "^0.25.0"
httpx = "^0.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
